[package]
name = "treemap"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[profile.release]
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"
async-sqlite = "0.2.2"
async-trait = "0.1.77"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.21"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
