[package]
name = "treemap"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

[profile.release]
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
unwrap_used = "deny"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-web = "4.5.1"
async-trait = "0.1.77"
aws-config = "1.2.0"
aws-credential-types = "1.2.3"
aws-sdk-s3 = "1.23.0"
chrono = "0.4.41"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.31"
glob = "0.3.1"
html-escape = "0.2.13"
image = "=0.25.0"
jsonwebtoken = "9.3.0"
jwks = "0.4.0"
kamadak-exif = "0.5.5"
libsql = { version = "0.6" }
log = "0.4.21"
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
snowflaker = "0.3.5"
tokio = { version = "1", features = ["full"] }
toml = "0.8.23"
url = "2.5.0"
xml = "0.8.20"
