[project]
name = "mapping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=16.1.0",
    "gpxpy>=1.6.2",
    "piexif>=1.1.3",
    "pillow>=12.1.0",
    "tqdm>=4.67.3",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "flake8>=7.3.0",
    "isort>=8.0.0",
    "mypy>=1.19.1",
]
